--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ girder-client = "*"
 toml = "*"
 pyudev = {version = "*", sys_platform = "== 'linux'"}
 python-magic = {version = "*", sys_platform = "== 'linux'"}
+requests = "*"
 
 [dev-packages]
 
