config changed db testing

--- a/vn_uploader/vn_config.toml
+++ b/vn_uploader/vn_config.toml
@@ -1,5 +1,6 @@
 [girder]
-host = "localhost"
-port = 8080
-apiRoot = "/api/v1"
-api_key = "M1UfQL0eqShMEQINoS4aeFD1RgQDS3KdPH3DoopA"
+apiKey = "M1UfQL0eqShMEQINoS4aeFD1RgQDS3KdPH3DoopA"
+apiUrl = "http://localhost:8080/api/v1"
+
+[visinum]
+db = "testing"
